--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="w-[30%] h-full flex flex-row justify-end items-center ">
         <div id="theme-btn" class="nav-button rounded-[12px] w-[125px] h-[52px]
         flex justify-evenly items-center ">
-          <p class="text-sm font-bold ">Themes</p>
+          <p class="text-sm font-bold ">Cards</p>
         </div>
 
       </div>
